github links fixed

--- a/api.html
+++ b/api.html
@@ -49,7 +49,7 @@
     </div>
     <div class='right'>
         <div class="ghbtn">
-            <a class="icon-github" href="https://github.com/grmlin"></a>
+            <a class="icon-github" href="https://github.com/grmlin/gremlinjs"></a>
         </div>
         <div class="ghbtn">
             <a class="icon-twitter" href="https://twitter.com/hardwehr"></a>
