--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
     <div class='right'>
         <div class="ghbtn">
-            <a class="icon-github" href="https://github.com/grmlin"></a>
+            <a class="icon-github" href="https://github.com/grmlin/gremlinjs"></a>
         </div>
         <div class="ghbtn">
             <a class="icon-twitter" href="https://twitter.com/hardwehr"></a>
@@ -84,7 +84,7 @@
     <div class="text-center button-hero">
 
         <div class="download-button-wrapper">
-            <a class="btn btn-large" href="build/latest/gremlin.min.js">Github</a>
+            <a class="btn btn-large" href="https://github.com/grmlin/gremlinjs">Github</a>
             <span class="download-info muted">&nbsp;</span>
         </div>
 
