anchor links fixed (hopefully)

--- a/examples.html
+++ b/examples.html
@@ -13,13 +13,13 @@
 
     <title>gremlin.js - Examples</title>
 
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/>
 
-    <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
-    <link rel="apple-touch-icon" sizes="57x57" href="img/apple-touch-icon-57x57.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png" />
-    <link rel="apple-touch-icon" sizes="144x144" href="img/apple-touch-icon-144x144.png" />
+    <link rel="apple-touch-icon" href="img/apple-touch-icon.png"/>
+    <link rel="apple-touch-icon" sizes="57x57" href="img/apple-touch-icon-57x57.png"/>
+    <link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png"/>
+    <link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png"/>
+    <link rel="apple-touch-icon" sizes="144x144" href="img/apple-touch-icon-144x144.png"/>
 
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 
@@ -27,7 +27,6 @@
     <link rel="stylesheet" href="css/bootstrap-responsive.min.css"/>
 
     <!-- Flatdoc -->
-
     <script src='js/flatdoc/legacy.js'></script>
     <script src='js/flatdoc/flatdoc.js'></script>
 
@@ -38,7 +37,7 @@
     <script src='js/site.js'></script>
 
 </head>
-<body role='flatdoc' class='no-literate big-h3 large-brief'  data-gremlin="Flatdoc" data-flatdoc-src="src/examples.md">
+<body role='flatdoc' class='no-literate big-h3 large-brief' data-gremlin="Flatdoc" data-flatdoc-src="src/examples.md">
 
 <div id="site-nav" class='header'>
     <div class='left'>
@@ -77,7 +76,9 @@
             </div>
             <a class="top-link" href="#"></a>
         </div>
-        <div class="span9"> <div role='flatdoc-content' class='content'></div> </div>
+        <div class="span9">
+            <div role='flatdoc-content' class='content'></div>
+        </div>
     </div>
 </div>
 
