--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
 
         <div class="download-button-wrapper">
             <a class="btn btn-primary btn-large download-button" href="build/latest/gremlin.min.js">Download</a>
-            <span class="download-info muted"><strong>v0.4.0</strong> ~4k minified and gzipped</span>
+            <span class="download-info muted"><strong><a
+                    href="https://github.com/grmlin/gremlinjs/blob/master/release-notes.md">v0.5.0</a></strong> ~4k minified and gzipped</span>
         </div>
     </div>
 
