--- a/api.html
+++ b/api.html
@@ -83,7 +83,7 @@
 </div>
 
 <script src="build/latest/gremlin.min.js"></script>
-<script src="build/extensions/gremlin.jquery.min.js"></script>
+<script src="build/modules/gremlin.jquery.min.js"></script>
 <script src="js/gremlins/ResponsiveMenu.js"></script>
 <script src="js/gremlins/Flatdoc.js"></script>
 
