--- a/custom_theme/base.html
+++ b/custom_theme/base.html
@@ -28,24 +28,28 @@
 
         {% if google_analytics %}
         <script>
-            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-            ga('create', '{{ google_analytics[0] }}', '{{ google_analytics[1] }}');
-            ga('send', 'pageview');
+//            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+//            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+//            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+//            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+//
+//            ga('create', '{{ google_analytics[0] }}', '{{ google_analytics[1] }}');
+//            ga('send', 'pageview');
         </script>
         {% endif %}
     </head>
 
     <body>
-
         {% include "nav.html" %}
-
         <div class="container">
+
+        {% if meta.no_nav%}
+            <div class="col-md-12" role="main">{% include "content.html" %}</div>
+            {% else %}
             <div class="col-md-3">{% include "toc.html" %}</div>
             <div class="col-md-9" role="main">{% include "content.html" %}</div>
+        {% endif %}
+
         </div>
 
         {% if include_search %}{% include "search.html" %}{% endif %}
